--- a/PianoNote/Asset/Base.lproj/Localizable.strings
+++ b/PianoNote/Asset/Base.lproj/Localizable.strings
@@ -3,10 +3,10 @@
 "lookAround" = "둘러보기";
 "manageFolder" = "폴더관리";
 "moveToNext" = "다음으로 이동...";
-"deletedMeno" = "삭제된 메모";
+"deletedMemo" = "삭제된 메모";
 "infomation" = "사용법";
 "makeUp" = "꾸미기";
-"communication" = "소통공간";
+"interact" = "소통공간";
 "select" = "선택";
 "selectAll" = "전체선택";
 "done" = "완료";
