--- a/PianoNote/Asset/Base.lproj/Localizable.strings
+++ b/PianoNote/Asset/Base.lproj/Localizable.strings
@@ -14,6 +14,8 @@
 "selectMemoCount" = "%d개 메모 선택됨";
 "facebookNotice" = "페이스북 아이디로 로그인 해야\n내용을 볼 수 있어요.";
 "facebookLogin" = "  페이스북으로 로그인";
+"facebookNoReply" = "답글 없음";
+"facebookReply" = "답글 %d개 보기";
 "dateYearPast" = "%d년 %d월";
 "dateYear" = "%d개월 전";
 "dateMonth" = "최근 한달";
