--- a/PianoNote/Asset/Base.lproj/Localizable.strings
+++ b/PianoNote/Asset/Base.lproj/Localizable.strings
@@ -23,4 +23,7 @@
 "dateYesterday" = "어제";
 "dateToday" = "오늘";
 "cancel" = "취소";
+"setting" = "설정";
+"requestCamera" = "카메라 기능을 사용하려면 사용관한을 허용해야 합니다.";
+"requestPhoto" = "사진 기능을 사용하려면 접근관한을 허용해야 합니다.";
 
