--- a/PianoNote/Asset/ko.lproj/Localizable.strings
+++ b/PianoNote/Asset/ko.lproj/Localizable.strings
@@ -4,6 +4,8 @@
 "manageFolder" = "폴더관리";
 "moveToNext" = "다음으로 이동...";
 "deletedMemo" = "삭제된 메모";
+"lockTitle" = "이 메모는 잠겨 있습니다.";
+"lockSubtitle" = "메모 보기";
 "infomation" = "사용법";
 "makeUp" = "꾸미기";
 "interact" = "소통공간";
