--- a/PianoNote/Asset/ko.lproj/Localizable.strings
+++ b/PianoNote/Asset/ko.lproj/Localizable.strings
@@ -6,8 +6,7 @@
 "deletedMemo" = "삭제된 메모";
 "lockTitle" = "이 메모는 잠겨 있습니다.";
 "lockSubtitle" = "메모 보기";
-"infomation" = "사용법";
-"makeUp" = "꾸미기";
+"howTo" = "사용법";
 "interact" = "소통공간";
 "select" = "선택";
 "selectAll" = "전체선택";
