--- a/PianoNote/Asset/Base.lproj/Localizable.strings
+++ b/PianoNote/Asset/Base.lproj/Localizable.strings
@@ -29,5 +29,5 @@
 "requestCamera" = "카메라 기능을 사용하려면 사용관한을 허용해야 합니다.";
 "requestPhoto" = "사진 기능을 사용하려면 접근관한을 허용해야 합니다.";
 "albumNoTitle" = "이름없음";
-
+"authReason" = "폴더 잠금 해제";
 
