1. Header 타이틀 연동 2. "새 메모 작성" 버튼 연동

--- a/PianoNote/Asset/ko.lproj/Localizable.strings
+++ b/PianoNote/Asset/ko.lproj/Localizable.strings
@@ -5,6 +5,7 @@
 "moveToNext" = "다음으로 이동...";
 "deletedMemo" = "삭제된 메모";
 "noMemo" = "메모 없음";
+"AllMemo" = "전체 메모";
 "lockTitle" = "이 메모는 잠겨 있습니다.";
 "lockSubtitle" = "메모 보기";
 "howTo" = "사용법";
@@ -30,3 +31,4 @@
 "requestPhoto" = "사진 기능을 사용하려면 접근관한을 허용해야 합니다.";
 "albumNoTitle" = "이름없음";
 "authReason" = "폴더 잠금 해제";
+
