MainList) 폴더화면 create new folder 기능

--- a/PianoNote/Asset/Base.lproj/Localizable.strings
+++ b/PianoNote/Asset/Base.lproj/Localizable.strings
@@ -3,6 +3,8 @@
 "edit" = "편집";
 "folder" = "폴더";
 "newFolder" = "새로운 폴더";
+"newFolderSubText" = "폴더의 이름을 입력하십시오.";
+"name" = "이름";
 "newMemoSubText" = "새 메모 작성";
 "lookAround" = "둘러보기";
 "manageFolder" = "폴더관리";
@@ -15,6 +17,7 @@
 "howTo" = "사용법";
 "interact" = "소통공간";
 "select" = "선택";
+"create" = "생성";
 "selectAll" = "전체선택";
 "done" = "완료";
 "restore" = "복원";
